<resources>
    <string name="app_name">PassworldAndroid</string>
    <string name="no_username">Sin nombre de usuario</string>
    <string name="all_passwords">Todas mis contraseñas</string>
    <string name="vault_unlock_title">Desbloquear baúl</string>
    <string name="vault_unlock_description">Introduce la contraseña maestra para desbloquear el baúl.</string>
    <string name="vault_unlock_hint">Contraseña maestra</string>
    <string name="vault_unlock_button">Desbloquear</string>
    <string name="vault_unlock_error">Error al desbloquear el baúl. Por favor, verifica tu contraseña.</string>
    <string name="sign_in_title">Iniciar Sesión</string>
    <string name="sign_in_button">Entrar</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="sign_in_error">Credenciales incorrectas. Inténtalo de nuevo.</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="or_sign_in_with">- - - - O iniciar sesion con - - - -</string>
    <string name="no_security_issues">Sin problemas de seguridad</string>
    <!-- Mensajes para el estado de seguridad -->
    <string name="weak_password">Contraseña débil</string>
    <string name="duplicate_password">Contraseña duplicada</string>
    <string name="compromised_password">Contraseña comprometida</string>
    <string name="unsafe_url">URL comprometida</string>
    <string name="security_issues_detected">Problemas detectados:\n%1$s</string>
    <string name="password_updated">Contraseña actualizada</string>
    <string name="error_updating">Error al actualizar: %1$s</string>
    <string name="error_saving">Error al guardar: %1$s</string>
    <string name="password_deleted">Contraseña eliminada</string>
    <string name="error_deleting">Error al eliminar: %1$s</string>

    <!-- TextInputLayout hints -->
    <string name="hint_description">Descripción</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_url">URL</string>
    <string name="hint_password">Contraseña</string>

    <!-- TextInputEditText text values (puedes usar estos como valores por defecto si es necesario) -->
    <string name="default_description">Mi descripción</string>
    <string name="default_username">miusuario123</string>
    <string name="default_url">https://ejemplo.com</string>
    <string name="default_password">miContraseñaSecreta</string>

    <!-- Buttons -->
    <string name="button_save">Guardar</string>
    <string name="button_delete">Eliminar</string>
    <string name="button_close">Cerrar</string>
    <string name="search_passwords_bar_text">Buscar contraseñas</string>
    <string name="no_passwords_found">No hay contraseñas</string>

    <string name="sort_name_asc">Nombre (A-Z)</string>
    <string name="sort_name_desc">Nombre (Z-A)</string>
    <string name="sort_date_newest">Más reciente primero</string>
    <string name="sort_date_oldest">Más antiguo primero</string>



    <string name="signup_title">Registro</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="register_button_text">Registrarse</string>
    <string name="or_sign_up_with">- - - - O Registrarse con - - - -</string>
    <string name="sign_up_already_have_account">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="sign_in_dont_have_account_question">¿No tienes una cuenta? Regístrate</string>
    <string name="dialog_establish_password_title">Establecer contraseña de la cuenta</string>
    <string name="dialog_establish_password_desc">Para poder iniciar sesion con usuario y contraseña es necesario establecer una contraseña ahora.</string>
    <string name="establish_master_password_title">Establecer contraseña maestra</string>
    <string name="establish_master_password_desc">Esta contraseña maestra se utilizará para cifrar y proteger todas tus contraseñas almacenadas. Es muy importante que no la olvides.</string>
    <string name="masterpassword_hint">Contraseña maestra</string>
    <string name="confirm_master_pass_hint">Confirmar contraseña maestra</string>
    <string name="menu_changelanguage_text">Cambiar idioma</string>
    <string name="menu_darkmode_text">Modo oscuro</string>
    <string name="menu_logout_text">Cerrar sesión</string>
    <string name="select_language">Seleccionar idioma</string>
    <string name="password">Contraseña</string>
    <string name="password_copied">Contraseña copiada</string>
    <string name="very_weak">Muy débil</string>
    <string name="weak">Débil</string>
    <string name="medium">Media</string>
    <string name="strong">Fuerte</string>
    <string name="very_strong">Muy fuerte</string>
    <string name="password_saved">Contraseña guardada</string>
    <string name="error_saving_password">Error al guardar</string>

    <string name="save_password_title">Guardar contraseña</string>
    <string name="helper_required">Obligatorio</string>
    <string name="required_field">Campo requerido</string>
    <string name="required_email_field">Correo requerido</string>
    <string name="required_password_field">Contraseña requerida</string>
    <string name="required_master_password_field">Contraseña maestra requerida</string>
    <string name="invalid_email_format">Correo electronico inválido</string>
    <string name="passwords_dont_match">Las contraseñas no coinciden</string>
    <string name="incorrect_master_password">Contraseña maestra incorrecta</string>
    <string name="dashboard">Estadísticas</string>

    <!-- Strings para las tarjetas de estadísticas -->
    <string name="secure_passwords">Contraseñas seguras</string>
    <string name="compromised_passwords">Contraseñas comprometidas</string>
    <string name="generate_new_password">Crear nueva contraseña</string>

    <!-- Strings para la generación de contraseñas -->
    <string name="generate_password">Generar contraseña</string>
    <string name="save_password">Guardar contraseña</string>
    <string name="password_strength">Fortaleza de la contraseña</string>
    <string name="password_length_format">Longitud: %1$d caracteres</string>
    <string name="use_uppercase_lowercase">Mayúsculas y minúsculas</string>
    <string name="include_numbers">Incluir números</string>
    <string name="include_special_chars">Incluir caracteres especiales</string>
    <string name="helper_optional">Opcional</string>
    <string name="button_cancel">Cancelar</string>
    <string name="all_label">Todas</string>
    <string name="security_label">Seguridad</string>
    <string name="item_description">Descripción</string>
    <string name="passwords_security_issues_label">Contraseñas con problemas de seguridad</string>
    <string name="generated_password_hint">Contraseña generada</string>
    <string name="aa_hint">Aa</string>
    <string name="_123_hint">123</string>
    <string name="symbols_hint">#@$!</string>
    <string name="password_too_short">La contraseña debe tener al menos 8 caracteres</string>
    <string name="password_needs_uppercase">La contraseña debe contener al menos una letra mayúscula</string>
    <string name="password_needs_special">La contraseña debe contener al menos un carácter especial</string>
    <string name="help">Ayuda</string>
    <string name="light_mode">Tema claro</string>
    <string name="dark_mode">Tema oscuro</string>
</resources>

