<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vaultRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?android:attr/windowBackground">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="166dp"
        android:layout_height="85dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/passworld_logo" />

    <!-- Title -->
    <TextView
        android:id="@+id/vaultTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/vault_unlock_title"
        android:textAlignment="center"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <!-- Description -->
    <TextView
        android:id="@+id/vaultTextLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vault_unlock_description"
        android:textAlignment="center"
        android:textSize="14sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/vaultTitleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Master Password -->
    <EditText
        android:id="@+id/masterPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/vault_unlock_hint"
        android:inputType="textPassword"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/vaultTextLabel"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Error Label -->
    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vault_unlock_error"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/masterPasswordField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Unlock Button -->
    <Button
        android:id="@+id/unlockButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vault_unlock_button"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/errorLabel"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
