<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dialogBackground"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/establish_master_password_title"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardBackgroundColor="@color/boxFieldBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="18dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_shield" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:text="@string/establish_master_password_desc"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/masterPassLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/masterpassword_hint"
            app:boxBackgroundColor="@color/boxFieldBackground"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/iconTint"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/masterPassInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue_medium"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/primaryText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/confirm_master_pass_hint"
            app:boxBackgroundColor="@color/boxFieldBackground"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/iconTint"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue_medium"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/primaryText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/savePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/button_save"
            android:textAllCaps="false"
            android:textColor="@color/buttonText"
            app:backgroundTint="@color/buttonBackground"
            app:cornerRadius="10dp"
            app:icon="@drawable/save_icon_white"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            app:iconTint="@color/iconTint" />

    </LinearLayout>
</androidx.cardview.widget.CardView>